fix(minor): wrong background color used in loading layout

--- a/client/src/css/LoadingScreen.css
+++ b/client/src/css/LoadingScreen.css
@@ -1,6 +1,6 @@
 @import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.min.css);
 .loading-grid {
-    background: #fff8ef;
+    background: #fbe08b;
     padding: 2%;
     min-height: 50vh;
     max-height: 100vh;
